fix: no flickering menus on viewport resize

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -242,3 +242,8 @@
     padding: 8px 16px;
   }
 }
+
+/* Stop playing transition for menus momentarily on viewport resize. */
+.stopTransition {
+  transition: none !important;
+}
